<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PixWeb</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="preview">Pixelized Preview</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="uno">Page 1</string>
    <string name="due">Page 2</string>
    <string name="tre">Page 3</string>
    <string name="quattro">Page 4</string>
    <string name="cinque">Page 5</string>
    <string name="title_activity_start_page">StartPAgeActivity</string>
    <string name="tick">Send to web</string>
    <string name="modify">Modify your draw</string>
    


</resources>